--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ uploads/IMG-607c5b7e7d1b13.40183125.png
 uploads/IMG-607c5ba3b281c9.41267623.jpg
 uploads/IMG-607c5bef042405.65055091.jpg
 *.mp4
+connection.php
